Update greenspun to Java 21
We can finally disable preview features, because switch on types is
stable in 21.